# pvecenter

./: .gitignore  ARCHITECTURE.md  AUDIT_2026-06-20.md  CHANGELOG.md  FEATURES_BACKLOG.md  LICENSE  README.md  ROADMAP.md  VISION.md  __init__.py  audit_ui_2026-06-19.md  backend.py  config.py  main.py  models.py  pve-center.spec  pyproject.toml  ruff.toml  run.py  run.sh  setup.py
.antigravitycli/: 15bdd5ff-6041-418e-95b4-45ef7fc51e0a.json
.github/workflows/: ci.yml  release.yml
.omo/context/: audit.md  icons_proposal.html  icons_proposal.py  patch-notes.md  session-handoff.md
.omo/plans/: cpu-to-cp.md
debian/: changelog  control  copyright  pve-center.desktop  pve-center.install  rules
docs/: AUDIT_2026-06-20.md  audit_2026-06-09.md  audit_2026-06-18.md  bugs.md  connection_troubleshooting.md  ux_proposals_2026-06-09.md
packaging/: pve-center-installer.nsi  pve-center-win.spec
pve_center/: __init__.py  __main__.py  backend.py  config.py  main.py
pve_center/domain/: __init__.py  _dictcompat.py  _format.py  cluster.py  enums.py  ha_group.py  ha_resource.py  iso_image.py  network.py  node.py  pool.py  repositories.py  snapshot.py  storage.py  task.py  vm.py
pve_center/provider/: __init__.py  _access.py  _cluster.py  _errors.py  _nodes.py  _pools.py  _rrd.py  _session.py  _storage.py  _tasks.py  _vms.py
pve_center/ui/: about_dialog.py  acl_dialog.py  add_server_dialog.py  backup_job_dialog.py  clone_vm_dialog.py  create_vm_dialog.py  detail_panel.py  group_dialog.py  hover.py  i18n.py  icons.py  mainwindow.py  migrate_vm_dialog.py  notification.py  object_id.py  role_dialog.py  storage_actions.py  theme.py  token_dialog.py  tree_panel.py  user_dialog.py  utils.py  vm_actions.py  vm_config_display.py  vm_config_editor_dialog.py  vm_device_editors.py  vm_restore_dialog.py  vzdump_dialog.py
pvecenter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/domain/: test_cluster.py  test_enums.py  test_ha_task_snap_net.py  test_node.py  test_repositories.py  test_storage_pool_iso.py  test_vm.py
tests/provider/: test_provider.py
tests/ui/: test_cache_roundtrip.py  test_card_list.py  test_tree_panel.py
ui/: add_server_dialog.py  create_vm_dialog.py  detail_panel.py  hover.py  i18n.py  icons.py  mainwindow.py  notification.py  theme.py  tree_panel.py  utils.py  vm_config_display.py  vm_config_editor_dialog.py  vm_device_editors.py
ui/api/: __init__.py  metrics.py
ui/widgets/: cluster_tasks_widget.py  vm_pool_widget.py  (+4 more)
(+22 files in other folders)
