[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvecenter"
version = "1.4.0"
description = "Desktop client for Proxmox VE clusters"
readme = "README.md"
authors = [{ name = "Taurus McLure", email = "taurus@mclure.ru" }]
license = { text = "GPL-3.0-only" }
keywords = ["proxmox", "pve", "pyside6", "virtualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "proxmoxer>=2.0",
    "requests>=2.28",
    "pyqtgraph>=0.12",
    "cryptography>=39.0",
]

[project.urls]
"Homepage" = "https://github.com/mcluremail/pvecenter"
"Bug Tracker" = "https://github.com/mcluremail/pvecenter/issues"

[project.scripts]
pvecenter = "pve_center.main:main"

[tool.setuptools.packages.find]
include = ["pve_center*"]

[tool.setuptools.package-data]
"pve_center.ui.i18n" = ["*.json"]
